DPK/QCDW32/qcwrt.pas

{$A+,F+,K+,X+}
{!
 *************************************************************
 *                                                           **
 *     Copyright (c) QUINN-CURTIS, INC. 1996                  *
 *                                                           **
 *************************************************************
 *                                                           **
 *   Filename :   QCWRT.PAS                                   *
 *   Author   :   RC                                          *
 *   Revision :   2.5                                         *
 *   Date     :   March 15, 1996                              *
 *   Product  :   Delphi Charting Tools for Windows 16/32     *
 *                                                           **
 *************************************************************
!}

unit QCWRT;
interface


uses WinProcs, WinTypes, Messages, QCWIN;

const
 //  Define RTFL in  conditional defines section of
 // project options to use SINGLE numeric type as realtype
{$ifndef RTFL}
 QCRTDLL = 'WRT32DR3.DLL';
{$else}
 QCRTDLL = 'WRT32FR3.DLL';
{$endif}


 AXU_SEC    = 0;       { time units codes for time axes}
 AXU_MIN    = 1;
 AXU_HOUR   = 2;

{ staircase style}

 NO_STEP    =0;
 STEP_START =1;
 STEP_END   =2;

 NORMAL_RTTRACE_COLOR_MODE =0;
 ALARM_RTTRACE_COLOR_MODE =1;

              { alarm types}
 ALM_OK    =0;
 ALM_SETP  =0;
 ALM_HIGH  =1;
 ALM_LOW   =2;
 ALM_HH    =3;
 ALM_LL    =4;
 ALM_RATE  =5;
 ALM_DEV   =6;
 ALM_FAIL  =7;

{ meter subtypes }
 GOD_SUBT_NEEDLE  = 0;       { needle meter  }
 GOD_SUBT_PIE     = 1;       { pie meter  }
 GOD_SUBT_ARC     = 2;       { arc meter  }

{********************************************************************}
{ Direction definitions                                              }
{********************************************************************}

 DYN_LEFT   = 0;       { scroll or move from right to left}
 DYN_RIGHT  = 1;
 DYN_UP     = 2;
 DYN_DOWN   = 3;

{************************************************************************}
{ Meter definitions******************************************************}
{************************************************************************}
{ needle types }

 NEEDLE_LINE     =  0;  { simple line}
 NEEDLE_THICK    =  1;  { thick lline with circle}
 NEEDLE_SHORTF   =  2;  { triangle with base at center - filled}
 NEEDLE_SHORTH   =  3;  { triangle with base at center - hollow}
 NEEDLE_LONGF    =  4;  { triangle with back plane - filled}
 NEEDLE_LONGH    =  5;  { triangle with back plane - hollow}

 MET_TICK_REG    = 0;
 MET_TICK_THICK  = 1;
 MET_TICK_TRIAG  = 2;

 MET_NOBORDER    = 0;
 MET_RECT        = 1;
 MET_CIRC        = 2;
 MET_RD_RECT     = 3;

{************************************************************************}
{ Dynamic label types ***************************************************}
{************************************************************************}
  DLB_NUMERIC  = 0;
  DLB_HMS      = 1;    { time format, hh:mm:ss. Prec ignored}
  DLB_HM       = 2;    { time format, hh:mm}
  DLB_MS       = 4;

{ CONTROL STYLES}
         { logic }
  BC_STYLE_PUSH      = 0;       { like standard push button}
  BC_STYLE_ONOFF     = 1;       { 2 state}
  BC_STYLE_XOR       = 2;       { radio button logic}
  BC_STYLE_PASSIVE   = 3;       { cannot be pressed}
         { appearance}
  BC_LOOK_LOW   = 0;            { standard pushbutton look}
  BC_LOOK_HIGH  = 1;            { "deep" pushbutton}
  BC_LOOK_RADIO = 2;            { standard radio button}
  BC_LOOK_CHECK = 3;            { "deep" check box}
  BC_LOOK_LED   = 4;            { LED}

 {************************************************************************}
{ Algorithm Definitions *************************************************}
{************************************************************************}
 MAX_CBLOCKS =128;

 ALG_NONE   = 0;
 ALG_PID    = 1;

{ PID bargraph}
{ order of handles:}
 PIDH_TITLE   =0;           { graph title}
 PIDH_LEFTYAX =1;           { left (measurement) Y axis}
 PIDH_LEFTLAB =2;           { left (measurement) Y axis labels}
 PIDH_LEFTTIT =3;           { left (measurement) Y axis title}
 PIDH_BARINP  =4;           { input (meas and setp) bargraph}
 PIDH_RIGHTYAX =5;          { right (output) Y axis}
 PIDH_RIGHTLAB =6;          { right (output) Y axis labels}
 PIDH_RIGHTTIT =7;          { right (output) Y axis title}
 PIDH_BAROUT   =8;          { output bargraph}
 PIDH_AM       =9;          { auto/manual message}
 PIDH_INPTEXT =10;          { live text for measurement and setpoint}
 PIDH_INPTAGS =11;          { tags for measurement and setpoint}
 PIDH_INPALMS =12;          { alarm text for measurement and setpoint}
 PIDH_OUTTEXT =13;          { live text for output}
 PIDH_OUTTAG  =14;          { tag for output}
 PIDH_OUTALMS =15;          { alarm text for output}

 PID_NH       =16;

{ Auto bar objects}
{ order of handles:}
 ABH_TITLE    = 0;          { graph title}
 ABH_FIRSTAX  = 1;          { left (bottom) axis}
 ABH_FIRSTLAB = 2;         { left (bottom) axis labels}
 ABH_AXTIT    = 3;          { left (bottom) axis title }
 ABH_BAR      = 4;          { bargraph}
 ABH_LASTAX   = 5;          { right (top)  axis}
 ABH_LASTLAB  = 6;          { right (top) axis labels}
 ABH_TAGS     = 7;          { tags}
 ABH_TEXT     = 8;          { live text}
 ABH_ALMMARKS = 9;          { alarm marks}
 ABH_ALMTEXT  =10;          { alarm text}

 AB_NH  = 11;

{ Auto scroll objects}
{ order of handles:}
 ASH_TITLE    = 0;          { graph title}
 ASH_XAX      = 1;          { X axis}
 ASH_XLAB     = 2;          { X axis labels}
 ASH_XTIT     = 3;          { X axis title}
 ASH_YAX      = 4;          { Y axis}
 ASH_YLAB     = 5;          { Y axis labels}
 ASH_YTIT     = 6;          { Y axis title}
 ASH_SCROLL   = 7;          { scrolling graph}
 ASH_TAGS     = 8;          { tags}
 ASH_TEXT     = 9;          { live text}
 ASH_ALMLINES =10;          { alarm lines}

 AS_NH  = 11;

{ Auto Text objects}
{ order of handles: }
 ATH_TITLE    = 0;          { graph title}
 ATH_TAGS     = 1;          { tags}
 ATH_VALUES   = 2;          { live text}
 ATH_ALMTEXT  = 3;          { alarm text}

 AT_NH  = 4;


{************************************************************************}
{ 32-Bit FUNCTION PROTOTYPES ***************************************************}
{************************************************************************}
{ Data functions ********************************************************}
{************************************************************************}
function WRDefineDynDataSet (lpTitle:LPSTR;
    nNumChans:INTEGER; lpUnits, lpTags:LPSTR; nHistSize:INTEGER): HDATA; stdcall;
procedure WRFreeDynDataSet (thData:HDATA); stdcall;
procedure WRUpdateData (thData:HDATA; prNewValues:LPReal;
    pGrDesc:PGRAPH_DEF); stdcall;
procedure WRUpdateBlockData (thData:HDATA; prNewValues:LPReal;
    nSamp:INTEGER; pGrDesc:PGRAPH_DEF); stdcall;
procedure WRGetLastData (thdata:HDATA; lprNewValues:LPReal;
     lprPrevValues:LPReal); stdcall;
function WRGetHistData (thdata:HDATA; nChan:INTEGER;
     lprUser:LPReal; nFirst, nNumSamples:INTEGER): INTEGER; stdcall;
procedure WRUpdateBinaryData (thdata:HDATA; wBinVal:UINT;
    pGrDesc:PGRAPH_DEF); stdcall;
function WRGetBinData (thData:HDATA): UINT; stdcall;
procedure WRSetBit (thdata:HDATA; nChanNum:INTEGER;
         bOn:BOOL; pGrDesc:PGRAPH_DEF); stdcall;
procedure WRSetBitExclusive (thdata:HDATA; nChanNum:INTEGER;
        pGrDesc:PGRAPH_DEF); stdcall;
function WRGetMinMaxValues (thdata:HDATA; nChan:INTEGER;
    var lprMin, lprMax:Realtype): BOOL; stdcall;
function WRReconnectDynDataSet (pGrDesc:PGRAPH_DEF; thgobj:HGOBJ;
    thData:HDATA): BOOL; stdcall;
procedure WRResetHistBuffer (thData:HDATA); stdcall;

{************************************************************************}
{ Dynamic graphical objects *********************************************}
{************************************************************************}
function WRSetScrollGraph (pGrDesc:PGRAPH_DEF;
    thdata:HDATA; rSampleInt, rRelResetInt:Realtype;
     nDir, nStep:INTEGER;
     lpLineStyle, lpLineWidth, lpLineColor:LPINT): HGOBJ; stdcall;
function WRSetVarScroll (pGrDesc:PGRAPH_DEF;
    thdata:HDATA; rRelResetInt: realtype; nDir, nStep: INTEGER;
   lpLineStyle, lpLineWidth, lpLineColor: LPINT): HGOBJ; stdcall;

function WRSetAlarmLines (pGrDesc:PGRAPH_DEF; thdata:HDATA;
	nUpdateSec, nDir:INTEGER;
        lpbFlags:LPBOOL;
    lpLineStyle, lpLineWidth, lpLineColor:LPINT): HGOBJ; stdcall;

function WRSetAlarmMarks (pGrDesc:PGRAPH_DEF; thdata:HDATA;
    hAxis:HGOBJ; nPos, nMarkSize:INTEGER;
    lpbFlags:LPBOOL;
    nLineWidth:INTEGER;
    lpLineColor:LPINT;
    lpNames:LPSTR): HGOBJ; stdcall;

function WRSetAlarmText (pGrDesc:PGRAPH_DEF;
     thdata:HDATA; nChan:INTEGER;
     rX1, rY1, rX2, rY2:Realtype;
     nBorderColor, nBorderWidth, nBackColor:INTEGER;
     lpNormMes:LPSTR;
     lpTextColor:LPINT;
     wAlign:UINT; nLayout:INTEGER): HGOBJ; stdcall;

function WRDynGrid (pGrDesc:PGRAPH_DEF; hAxis:HGOBJ;
     nGridType, nUpdateSec:INTEGER): HGOBJ; stdcall;

function WRSetXYGraph (pGrDesc:PGRAPH_DEF; thdata:HDATA;
	    nNumPoints:INTEGER;
    lpLineStyle, lpLineWidth, lpLineColor:LPINT): HGOBJ; stdcall;
function WRSetStackedGraph (pGrDesc:PGRAPH_DEF; thdata:HDATA;
    rSampleInt, rRelResetInt:Realtype;
    nDir, nStep:INTEGER;
    rRelSize:Realtype;
    lpLineStyle, lpLineWidth, lpLineColor:LPINT): HGOBJ; stdcall;

function WRSetLogicGraph (pGrDesc:PGRAPH_DEF; thdata:HDATA;
	rSampleInt, rRelResetInt:Realtype;
         nDir, nNumChannels:INTEGER;
	 rRelSize:Realtype;
        lpLineStyle, lpLineWidth, lpLineColor:LPINT): HGOBJ; stdcall;

function WRSetDynText (pGrDesc:PGRAPH_DEF;
     thdata:HDATA; nChan:INTEGER;
     rX1, rY1, rX2, rY2:Realtype;
     nBorderColor, nBorderWidth:INTEGER;
     lpTextColor:LPINT;
     nBackColor, nLayout, nChar, nPrec:INTEGER;
     hDynObj:HGOBJ; n3D:INTEGER): HGOBJ; stdcall;

function WRLogicTags (pGrDesc:PGRAPH_DEF;
     nBorderColor, nBorderWidth, nTextColor, nBackColor:INTEGER;
     hStr:HGLOBAL; hLogObj:HGOBJ): HGOBJ; stdcall;

function WRLogicTagsPtr (pGrDesc:PGRAPH_DEF;
     nBorderColor, nBorderWidth, nTextColor, nBackColor:INTEGER;
     lpStr:LPSTR; hLogObj:HGOBJ): HGOBJ; stdcall;

function WRAutoRescale (pGrDesc:PGRAPH_DEF; hAxis:HGOBJ;
    thdata:HDATA; nChan:INTEGER;
    var lprMin, lprMax:Realtype;
    bUpdate:BOOL): BOOL; stdcall;
function WRDrawTimeAxis (pGrDesc:PGRAPH_DEF;
    rTickSpace:Realtype;
    nSmallTicks, nTickPos, nDir, nTimeUnits:INTEGER): HGOBJ; stdcall;
function WRLabelTimeAxis (pGrDesc:PGRAPH_DEF;
    hAxis:HGOBJ;
    nLabelPos, nFormat, nPrec, nStartHour, nStartMin, nStartSec:INTEGER;
    rStartNum:Realtype;
    nLast:INTEGER;
    lpTextLast:LPSTR): HGOBJ; stdcall;
Function WRChangeTimeLabelsFormat (pGrDesc: PGRAPH_DEF;
    hLab: HGOBJ; nNewFormat: INTEGER): BOOL; stdcall;
function WRDynLegend (pGrDesc:PGRAPH_DEF;
	 rX1, rY1, rX2, rY2:Realtype;
	 nBorderColor, nBorderWidth, nTextColor, nBackColor, nLayout:INTEGER;
         hStr:HGLOBAL; hDynObj:HGOBJ; bSymbols:BOOL) : HGOBJ; stdcall;
function WRDynLegendPtr (pGrDesc:PGRAPH_DEF;
	  rX1, rY1, rX2, rY2:Realtype;
	  nBorderColor, nBorderWidth, nTextColor, nBackColor, nLayout:INTEGER;
          tlpStr:LPSTR; hDynObj:HGOBJ; bSymbols:BOOL): HGOBJ; stdcall;
function WRSetScrollBargraph (pGrDesc:PGRAPH_DEF;
    thdata:HDATA; nChan:INTEGER;
    rSampleInt, rRelResetInt:Realtype;
    nDir:INTEGER;
    rWidth:Realtype;
    rgbBarColor:TCOLORREF;
    nBorderColor:INTEGER): HGOBJ; stdcall;
function WRResetScroll (pGrDesc:PGRAPH_DEF; hScroll:HGOBJ): BOOL; stdcall;

function WRSetSweepGraph (pGrDesc:PGRAPH_DEF; thdata:HDATA;
	rSampleInt:Realtype;
        nDir, nStep, nSweepLineColor:INTEGER; lpLineStyle, lpLineWidth, lpLineColor:LPINT): HGOBJ; stdcall;
